# moncoll

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/moncoll/: __init__.py
src/moncoll/util/: __init__.py
tests/: conftest.py  test_make_url.py  test_monwrap.py  test_to_bulklist.py
